# hc-java

./: .gitignore  README.md  plan.md  《Web应用技术》大作业报告 .docx
hc-re/: .gitignore  README.md  pom.xml
hc-re-AIp/: .gitignore  AIGC_API_GUIDE.md  MANIFEST.in  api-data.env.example  api.md  pyproject.toml  requirements.txt  run_http_service.py  test_smoke.py
hc-re-AIp/.claude/: settings.local.json
hc-re-AIp/src/hc_re_ai/: __init__.py  aigc_client.py  baidu_ocr.py  config.py  easy_ocr.py  grader_client.py  http_service.py  job_processor.py
hc-re-AIp/src/hc_re_ai/readers/: __init__.py  base.py  docx_reader.py  image_reader.py  txt_reader.py
hc-re/scripts/: 001_add_annotated_filepath.sql  clean.sql  init.bat  init.sh  insert.sql  migrate_aigc_columns.sql  migrate_annotated_filepath.sql  migrate_assignment_requirement.sql  migrate_student_features.sql  migrate_submission_score.sql  table.sql
hc-re/src/main/resources/: application.yml
hc-vue/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
hc-vue/src/: App.vue
hc-vue/src/api/: admin.ts  teacher.ts
hc-vue/src/components/: AnnotatablePreview.vue  AssignmentForm.vue  AssignmentList.vue  BatchAiGrade.vue  FilePreview.vue  GradingPanel.vue  StudentList.vue  TeacherForm.vue  TeacherList.vue  Toast.vue
hc-vue/src/composables/: useToast.ts
hc-vue/src/router/: index.ts
hc-vue/src/types/: teacher.ts
hc-vue/src/views/: AdminDashboard.vue  ClassDetail.vue  Home.vue  Login.vue  StudentDashboard.vue  StudentLogin.vue  StudentView.vue
resources/: 1.docx  5 - 副本 (2).docx  5 - 副本.docx  5.docx
(+63 files in other folders)
